kubernetes/admin_service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: wearsphere
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 5174
      targetPort: 5174
