kubernetes/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wearsphere
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
