kubernetes/mongo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: wearsphere
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
